<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.UserPrefActivity">

    <TextView
            android:text="@string/txt_welcome_userPref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_welcome_userPrefs" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_username_sharedpref" android:textStyle="bold"
            android:textSize="30sp" app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintVertical_bias="0.523" android:textColor="@android:color/background_light"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_username_sharedPref"
            android:textColorHint="@android:color/background_light"
            android:ems="10"
            android:id="@+id/txt_username_sharedpref" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="92dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_userpref"
            android:textColor="@android:color/background_light"/>
    <Button
            android:text="@string/btn_enter_sharedPref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_userpref" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="136dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"/>

</android.support.constraint.ConstraintLayout>