<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.GameActivity">

    <ImageView
            android:layout_width="289dp"
            android:layout_height="309dp" app:srcCompat="@drawable/ic_launcher_foreground"
            android:id="@+id/img_game" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:hint="@string/tct_hint_game"
            android:textColorHint="@android:color/white"
            android:ems="10"
            android:id="@+id/txt_guess_game" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/img_game" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
    />
    <Button
            android:text="@string/btn_enter_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_enter_game"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textStyle="bold" app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/txt_guess_game"
    />
    <TextView
            android:layout_width="170dp"
            android:layout_height="44dp"
            android:id="@+id/txt_score" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/img_game" android:textColor="@color/cardview_light_background"
            android:textSize="18sp" android:textStyle="bold"/>
    <Button
            android:text="@string/btn_quit_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_return_game"
            app:layout_constraintTop_toBottomOf="@+id/btn_enter_game"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0" android:textStyle="bold"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.38"/>
    <TextView
            android:layout_width="170dp"
            android:layout_height="44dp"
            android:id="@+id/txt_int_score"
            android:textColor="@color/cardview_light_background" android:textStyle="bold"
            app:layout_constraintRight_toRightOf="@id/txt_score"
            app:layout_constraintStart_toEndOf="@+id/txt_score" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/img_game" app:layout_constraintHorizontal_bias="0.829"
            app:layout_constraintVertical_bias="0.0"/>
</android.support.constraint.ConstraintLayout>